0026213: Visualization - replace sequence in Select3D_SensitiveGroup

NCollection_IndexedMap is now used instead of NCollection_Sequence within Select3D_SensitiveGroup.