src/StdSelect/StdSelect_BRepSelectionTool.cxx
@@ -87,8 +87,7 @@ void StdSelect_BRepSelectionTool::PreBuildBVH (const Handle(SelectMgr_Selection)
     }
 
     Handle(Select3D_SensitiveGroup) aGroup = Handle(Select3D_SensitiveGroup)::DownCast (aSensitive);
-    const Select3D_EntitySequence& aSubEntities = aGroup->GetEntities();
-    for (Select3D_EntitySequenceIter aSubEntitiesIter (aSubEntities); aSubEntitiesIter.More(); aSubEntitiesIter.Next())
+    for (Select3D_IndexedMapOfEntity::Iterator aSubEntitiesIter (aGroup->Entities()); aSubEntitiesIter.More(); aSubEntitiesIter.Next())
     {
       const Handle(Select3D_SensitiveEntity)& aSubEntity = aSubEntitiesIter.Value();
       if (aSubEntity->NbSubElements() >= BVH_PRIMITIVE_LIMIT)
